Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2277

cluster alarm messages broadcast infinitely

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 4.1.2
    • Clustering
    • None

    Description

      in mgmt/cluster/ClusterCom.cc, the alarm messages generated by lmgmt->alarm_keeper->signalAlarm(xxx) will be broadcasted infinitely. because these messages have no consumers. I think we should NOT generate these alarms in this case.

      Attachments

        Activity

          People

            happy_fish100 Yu Qing
            happy_fish100 Yu Qing
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: