TS-2277: cluster alarm messages broadcast infinitely